--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -2,21 +2,62 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
-    gap: 8px;
+    gap: 16px;
     padding: 20px;
     background-color: var(--background-color);
     border-radius: 4px;
+    min-width: 320px;
+    margin: 0 auto;
 }
-label {
-    color: var(--first-font-color);
+.inputwrap{
+    position: relative;
 }
-.form input{
-    padding: 4px 16px;
+.input{
+    width: 100%;
+    padding: 8px;
     border-radius: 4px;
     border: 1px solid var(--first-font-color);
+    font-size: 16px;
+    background-color: transparent;
 }
-.form input:hover{
+.input:hover, input:focus {
     border-color: var(--border-color);
+    caret-color: var(--border-color);
+}
+.label {    
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    color: var(--first-font-color);
+    background-color: var(--background-color);
+    padding: 0 4px;
+    font-size: 16px;
+    line-height: 1;
+    cursor: text;
+    pointer-events: none;
+    transition: all 0.2s ease;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.input:focus{
+    outline: none;
+}
+.input:hover + .label, .input:focus + .label, .input:not(:placeholder-shown) + .label{
+    top: -8px;
+    left: 6px;
+    font-size: 12px;
+    color: var(--border-color);
+    z-index: 1111;
+}
+.eye{
+position: absolute;
+top: 8px;
+right: 8px;
+cursor: pointer;
+}
+
+.input-wrap:hover + .eye, .input-wrap:focus-within + .eye{
+    color: var(--border-color);
 }
 button{
     padding: 8px 16px;
