--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --main-font: 'Star Wars', sans-serif;;
+  /* https://www.cdnfonts.com/star-wars.font */
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,6 +15,7 @@
   --button-bg-color: rgb(40, 56, 71); 
   --background-image: url("./img/galaxy-night-landscape-min.jpg");
   --border-color: rgb(88, 168, 248);
+  --second-border-color: #FFE81F;
   --first-font-color: rgb(244, 246, 249 );
   --second-font-color: rgb(53, 152, 250);
 }
@@ -46,10 +46,6 @@ body {
   background-position: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
   border: none;
