--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-    font-family: var(--main-font);
+    font-family: var(--first-font);
     font-weight: bold;
     font-size: 4rem;
     line-height: 1;
