--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
   --second-font-color: rgb(53, 152, 250);
 }
 
+/* <a target="_blank" href="https://icons8.com/icon/TmBeo7H4cjCl/yoda">Yoda</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> */
+/* <a target="_blank" href="https://icons8.com/icon/39423/r2-d2">R2-D2</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> */
 [data-theme ="light"]{
   --background-color: rgb(96, 127, 148);
   --button-bg-color: rgb(40, 56, 71);
