--- a/src/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -1,6 +1,15 @@
 .themeBox{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 4px;
+}
+.themeBox p {
+  text-wrap: wrap;
+  background-color: var(--background-color);
+  padding: 4px;
+  border-radius: 4px;
+  width: 100px;
 }
 /* .themeBtn{
     cursor: pointer;
@@ -25,8 +34,8 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 50px;
-    height: 26px;
+    width: 60px;
+    height: 60px;
   }
   
   /* Hide default HTML checkbox */
@@ -37,7 +46,20 @@
   }
   
   /* The slider */
-  .slider {
+  .themebtn{
+    padding: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    background-color: var(--background-color);
+    border-radius: 50%;
+    width: 60px;
+    height: fit-content;
+    cursor: pointer;
+  }
+  /* .slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -72,13 +94,13 @@
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
+  } */
   
   /* Rounded sliders */
-  .slider.round {
+  /* .slider.round {
     border-radius: 34px;
   }
   
   .slider.round:before {
     border-radius: 50%;
-  }
+  } */
