--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --second-font: "WDXL Lubrifont TC", sans-serif;;
 
   font-family: var(--second-font);
-  line-height: 1.5;
+  line-height: 1;
   font-weight: 400;
   color-scheme: light dark;
   font-synthesis: none;
@@ -14,6 +14,7 @@
 
 [data-theme ="dark"]{
   --background-color: rgb(96, 127, 148);
+  --second-bg-color: rgba(133, 193, 233, 0.3);
   --button-bg-color: rgb(40, 56, 71); 
   --background-image: url("./img/galaxy-night-landscape-min.jpg");
   --border-color: rgb(88, 168, 248);
@@ -26,6 +27,7 @@
 /* <a target="_blank" href="https://icons8.com/icon/39423/r2-d2">R2-D2</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> */
 [data-theme ="light"]{
   --background-color: rgb(96, 127, 148);
+  --second-bg-color: rgba(133, 193, 233, 0.777);
   --button-bg-color: rgb(40, 56, 71);
   --background-image: url("./img/desert-day-landscape-min.jpg");
   --border-color: rgb(88, 168, 248);
@@ -41,7 +43,22 @@
   padding: 0;
 }
 a {
+  display: block;
   text-decoration: none;
+  color: var(--first-font-color);
+  background-color: var(--button-bg-color);
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  text-align: center;
+}
+
+a:hover{
+color: var(--second-font-color)
+}
+a:active{
+    transform: scale(0.96);
 }
 
 body {
