--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,34 +1,53 @@
 .form {
-  border: 1px solid rgba(255, 255, 255, 0.356);
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  padding: 24px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.errText {
-  color: red;
-}
-.button {
-  margin-top: 10px;
-}
-.input {
-  padding: 4px;
-  padding-left: 8px;
-  margin-top: 10px;
-}
-@media screen and (min-width: 720px) {
-  .form {
+    display: flex;
+    flex-direction: column;
     width: fit-content;
-  }
-  .text {
-    font-size: 40px;
-  }
+    gap: 16px;
+    padding: 20px;
+    background-color: var(--background-color);
+    border-radius: 4px;
+    max-width: 450px;
+    margin: 0 auto;
 }
-@media screen and (min-width: 1200px) {
-  .text {
-    font-size: 20px;
-  }
+
+.inputwrap{
+    position: relative;
 }
+.input{
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--first-font-color);
+    font-size: 16px;
+    background-color: transparent;
+}
+.input:hover, input:focus {
+    border-color: var(--border-color);
+    caret-color: var(--border-color);
+}
+.label {    
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    color: var(--first-font-color);
+    background-color: var(--background-color);
+    padding: 0 4px;
+    font-size: 16px;
+    line-height: 1;
+    cursor: text;
+    pointer-events: none;
+    transition: all 0.2s ease;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+}
+
+.input:focus{
+    outline: none;
+}
+.input:hover + .label, .input:focus + .label, .input:not(:placeholder-shown) + .label{
+    top: -8px;
+    left: 6px;
+    font-size: 12px;
+    color: var(--border-color);
+    z-index: 1111;
+}
+
