--- a/src/components/FormStyles.module.css
+++ b/src/components/FormStyles.module.css
@@ -1,4 +1,4 @@
-/* .form{
+.form{
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -48,8 +48,8 @@
     font-size: 12px;
     color: var(--border-color);
     z-index: 1111;
-} */
-/* .eye{
+}
+.eye{
 position: absolute;
 top: 8px;
 right: 8px;
@@ -63,4 +63,4 @@ cursor: pointer;
 .warning{
     font-size: 12px;
     text-wrap: wrap;
-} */
+}
