--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,21 @@ a:active{
     transform: scale(0.96);
 }
 
+button{
+    padding: 8px 16px;
+    border-radius: 4px;
+    background-color: var(--button-bg-color);
+    transition: all 0.2s ease;
+
+}
+
+    button:hover{
+color: var(--second-font-color)
+}
+button:active{
+    transform: scale(0.96);
+}
+
 body {
   margin: 0;
   min-width: 320px;
