contact styles added

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -50,4 +50,4 @@
     color: var(--border-color);
     z-index: 1111;
 }
-
+ */
