--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,33 +1,11 @@
 .list {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  gap: 10px;
-  width: 100%;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(25ch, 1fr));
+  justify-items: center;
 }
-.item {
-  width: auto;
-}
+
 .message {
-  width: 100%;
-}
-@media screen and (min-width: 720px) {
-  .list {
-    flex-wrap: wrap;
-    gap: 20px;
-    flex-direction: row;
-    width: 80%;
-    justify-content: center;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-  }
-  .item {
-    margin: 8px;
-  }
+  width: fit-content;
+  margin: 0 auto;
 }
