--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,4 +1,4 @@
-.form{
+/* .form{
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -71,4 +71,4 @@ color: var(--second-font-color)
 }
 button:active{
     transform: scale(0.96);
-}
+} */
