--- a/src/components/FormStyles.module.css
+++ b/src/components/FormStyles.module.css
@@ -71,3 +71,13 @@ cursor: pointer;
   max-width: 320px;
 }
 
+.message{
+position: absolute;
+width: 80px;
+background-color: var(--button-bg-color);
+color: var(--warning-color);
+border-radius: 4px;
+padding: 8px;
+text-align: center;
+transition: all 0.97s ease;
+}
